# project-management

./: .env  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
front/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
front/src/: App.tsx
src/: app.py  database.py  models.py  settings.py
src/alembic/: env.py
src/alembic/versions/: a710fe934d0b_init.py
src/routing/: employee.py  projects.py
src/schemas/: employee.py  projects.py
src/services/: employee.py  project.py  utils.py
