[tool.poetry]
name = "test-task"
version = "0.1.0"
description = ""
authors = ["Danila Vorobev"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.0"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.38"
pydantic-settings = "^2.7.1"
alembic = "^1.14.1"
asyncpg = "^0.30.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
ruff = "^0.9.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
